# luxe

./: README.md
lxappearance/: Makefile.in
lxappearance-obconf/: Makefile.in  config.h.in  configure
lxappearance-obconf/lxappearance-obconf-0.2.3/: aclocal.m4
lxappearance-obconf/lxappearance-obconf-0.2.3/po/: LINGUAS
lxappearance/lxappearance-0.3.0/: aclocal.m4  config.h.in  configure  lxappearance.desktop
lxappearance/lxappearance-0.3.0/man/: Makefile.in  lxappearance.1
lxappearance/po/: sl.po
lxappearance/src/: Makefile.in
lxhotkey/: config.h.in
lxhotkey/lxhotkey-0.1.0/: Makefile.in  configure
lxhotkey/lxhotkey-0.1.0/po/: LINGUAS
lxhotkey/lxhotkey-0.1.0/src/: Makefile.in
lxhotkey/plugins/: Makefile.in
lxhotkey/plugins/gtk/: lxhotkey-gtk.desktop
lxmenu-data/: Makefile.in  configure
lxmenu-data/layout/: Makefile.in
lxmenu-data/lxmenu-data-0.1.4/: aclocal.m4
lxmenu-data/lxmenu-data-0.1.4/desktop-directories/: Makefile.in
lxmenu-data/po/: LINGUAS
lxnm/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
lxnm/data/: Makefile.am  Makefile.in  ethdown.sh  ethrepair.sh  lxnm.conf.in  wificonnect.sh  wifirepair.sh  wifiup.sh
lxnm/man/: Makefile.am  Makefile.in  lxnm.1  lxnm.sgml
lxnm/src/: Makefile.am  Makefile.in  lxnm.c  lxnm.h
lxnm/utils/: Makefile.am  Makefile.in  lxnetctl.c
lxpanel/: Makefile.in  configure
lxpanel/data/: Makefile.in
lxpanel/man/: Makefile.in
lxpanel/plugins/: Makefile.in
lxpanel/src/: Makefile.in  panel.h
lxpolkit/: Makefile.in  aclocal.m4  configure.ac
lxpolkit/data/: lxpolkit.desktop.in.in
lxpolkit/data/ui/: Makefile.am  lxpolkit.ui
lxpolkit/lxpolkit-0.1.0/: AUTHORS  README  configure
lxpolkit/lxpolkit-0.1.0/data/: Makefile.am  Makefile.in
lxpolkit/lxpolkit-0.1.0/data/ui/: Makefile.in
lxpolkit/lxpolkit-0.1.0/po/: af.po  am.po  ar.po  be.po  bn.po  bn_IN.po  ca.po  de.po  en_GB.po  es.po  es_VE.po  fa.po  fi.po  fo.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  si.po  sr.po  sv.po  te.po  tr.po  uk.po  vi.po  zh_TW.po
lxpolkit/lxpolkit-0.1.0/src/: Makefile.am  lxpolkit-listener.c
lxpolkit/po/: LINGUAS  POTFILES.in  bg.po  cs.po  da.po  el.po  fr.po  he.po  km.po  lg.po  lt.po  nb.po  pl.po  sk.po  sl.po  sr@latin.po  tt_RU.po  zh_CN.po
lxpolkit/src/: Makefile.in  lxpolkit.c
lxrandr/: Makefile.in
lxrandr/data/: Makefile.in
lxrandr/lxrandr-0.3.2/: aclocal.m4  configure
lxrandr/lxrandr-0.3.2/po/: LINGUAS
lxrandr/src/: Makefile.in
lxsession/: Makefile.in  aclocal.m4  config.h.in  configure
lxsession/data/: Makefile.in  lxsession-edit.desktop
lxsession/data/ui/: Makefile.in
lxsession/lxclipboard/: main.c
lxsession/lxpolkit/: main.c
lxsession/lxsession/: app.c  autostart.c  conffiles.c  control.c  dbus-common.c  dbus-gnome-session.c  dbus-lxde-session.c  environement.c  main.c  notifications.c  options.c  process.c  settings.c  utils.c
lxsession/lxsession-db/: desktop-files-backend.c  main.c
lxsession/lxsession-default-apps/: autostart.c  combobox.c  dbus-backend.c  main.c  utils.c
lxsession/lxsettings-daemon/: main.c
lxsession/man/: Makefile.in
lxsession/po/: LINGUAS
lxsession/xdg-autostart/: main.c
lxtask/: Makefile.in  aclocal.m4  config.h.in  configure
lxtask/lxtask-0.1.9/src/: Makefile.in
lxtask/po/: LINGUAS
lxterminal/: Makefile.in  aclocal.m4  config.h.in  configure
lxterminal/data/: Makefile.in
lxterminal/man/: Makefile.in  lxterminal.1
lxterminal/po/: LINGUAS
lxterminal/src/: Makefile.in
menu-cache/: Makefile.in  aclocal.m4  configure
menu-cache/docs/: Makefile.in
menu-cache/docs/reference/: Makefile.in
menu-cache/docs/reference/libmenu-cache/: Makefile.in
menu-cache/libmenu-cache/: Makefile.in
menu-cache/menu-cache-daemon/: Makefile.in
menu-cache/menu-cache-gen/: Makefile.in
